Revert "Refactor database migrations and update security configuration"
This reverts commit ef8b68e0cb729b8fb2962a12b79baec6085020e9.